samples/_failures_safe/1761499550_6c916d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9993daec.c: In function ‘primMST’:
./samples/SAFE/__tmp_9993daec.c:156:9: error: expected declaration or statement at end of input
  156 |         free(heap->array);
      |         ^~~~
./samples/SAFE/__tmp_9993daec.c:156:9: error: expected declaration or statement at end of input
